Changed position from absolute to relative and added min-height to ecom baket button at mobile to try and solve text overlap.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1412,9 +1412,11 @@ select::-ms-expand {
             width: 120px;
             padding: 10px;
             margin: 0px auto;
-            display: table;
+            min-height: 40px;
+            display: block;
             left: 0;
             top: 50px;
+            position: relative
         }
         @media @mobile {
             text-align: center;
